fix modals and scrollbars

--- a/src/assets/styles/scss/common/theme-customizing.scss
+++ b/src/assets/styles/scss/common/theme-customizing.scss
@@ -11,17 +11,26 @@
   height: calc(100vh - 80px);
 }
 
-.progress-bar {
+.progress {
   height: $main-size * 2.5;
+  margin-bottom: $main-size;
+  background-color: $light-gray;
+  box-shadow: 
+    inset 0 3px 3px 0 rgba(255, 255, 255, 0.25),
+    inset 0 -3px 3px 0 rgba(0, 0, 0, 0.08);
 }
 
-.progress {
-  margin-bottom: $main-size;
+.progress-bar {
+  height: 100%;
+  box-shadow: 
+  inset 0 3px 3px 0 rgba(255, 255, 255, 0.25),
+  inset 0 -3px 3px 0 rgba(0, 0, 0, 0.08);
 }
 
 .modal-dialog {
   height: 85vh;
   overflow-y: auto;
+  pointer-events: auto;
 
   @media (min-width: 576px) {
     max-width: 800px;
@@ -42,4 +51,8 @@
 
 .btn {
   text-transform: uppercase;
+
+  &-xs {
+    padding: 0 $double-size;
+  }
 }
